--- a/Html/index.html
+++ b/Html/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="screen-backdrop">
+      <div class="screen-backdrop"></div>
         <div class="screen home-screen">
           <div class="head-wrapper">
             <div class="menu-btn">
@@ -93,65 +93,32 @@
                     </svg>
                   </div>
                 </div>
-              </div>
-              <div class="category">
-                <div class="left">
-                  <img src="../Images/boy.png" alt="" />
-                  <div class="content">
-                    <h1>Personal</h1>
-                    <p>5 Tasks</p>
-                  </div>
-                </div>
-                <div class="options">
-                  <div class="toggle-btn">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
-                      />
-                    </svg>
-                  </div>
-                </div>
-              </div>
-              <div class="category">
-                <div class="left">
-                  <img src="../Images/boy.png" alt="" />
-                  <div class="content">
-                    <h1>Personal</h1>
-                    <p>5 Tasks</p>
-                  </div>
-                </div>
-                <div class="options">
-                  <div class="toggle-btn">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
-                      />
-                    </svg>
-                  </div>
-                </div>
-              </div>
+          
+                       
             </div>
           </div>
         </div>
       </div>
-    </div>
+      <div class="screen category-screen">
+        <div class="head-wrapper">
+          <div class="back-btn">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>  
+    <script src="../JavaScript/app.js"></script>
   </body>
 </html>
