task wrapper and delete button added to the category screen

--- a/Html/index.html
+++ b/Html/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo-List</title>
+    <link rel="icon" type="image/x-icon" href="../Images/ToDo-List-Logo.png" />
+    <title>ToDo-App</title>
     <link rel="stylesheet" href="../StyleSheet/main.css" />
   </head>
   <body>
     <div class="wrapper">
       <div class="screen-backdrop"></div>
-        <div class="screen home-screen">
-          <div class="head-wrapper">
+      <div class="screen home-screen">
+        <div class="head-wrapper">
+          <div class="head-top">
             <div class="menu-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -27,74 +29,76 @@
                 />
               </svg>
             </div>
-            <div class="welcome">
-              <div class="content">
-                <h1>Hello Elvin</h1>
-                <p>Today you Have 5 tasks</p>
-              </div>
-              <div class="img">
-                <div class="backdrop"></div>
-                <img src="../Images/boy.png" alt="" />
-              </div>
+            <div class="top-logo">
+              <img src="../Images/ToDo-List-Logo.png" alt="" />
             </div>
           </div>
-          <div class="categories-wrapper">
-            <div class="categories">
-              <div class="category">
-                <div class="left">
-                  <img src="../Images/boy.png" alt="" />
-                  <div class="content">
-                    <h1>Personal</h1>
-                    <p>5 Tasks</p>
-                  </div>
-                </div>
-                <div class="options">
-                  <div class="toggle-btn">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
-                      />
-                    </svg>
-                  </div>
+          <div class="welcome">
+            <div class="content">
+              <h1>Hello Elvin</h1>
+              <p>Today you Have 5 tasks</p>
+            </div>
+            <div class="img">
+              <div class="backdrop"></div>
+              <img src="../Images/boy.png" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="categories-wrapper">
+          <div class="categories">
+            <div class="category">
+              <div class="left">
+                <img src="../Images/boy.png" alt="" />
+                <div class="content">
+                  <h1>Personal</h1>
+                  <p>5 Tasks</p>
                 </div>
               </div>
-              <div class="category">
-                <div class="left">
-                  <img src="../Images/boy.png" alt="" />
-                  <div class="content">
-                    <h1>Personal</h1>
-                    <p>5 Tasks</p>
-                  </div>
+              <div class="options">
+                <div class="toggle-btn">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
+                    />
+                  </svg>
                 </div>
-                <div class="options">
-                  <div class="toggle-btn">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      fill="none"
-                      viewBox="0 0 24 24"
-                      stroke-width="1.5"
-                      stroke="currentColor"
-                      class="w-6 h-6"
-                    >
-                      <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
-                      />
-                    </svg>
-                  </div>
+              </div>
+            </div>
+            <div class="category">
+              <div class="left">
+                <img src="../Images/boy.png" alt="" />
+                <div class="content">
+                  <h1>Personal</h1>
+                  <p>5 Tasks</p>
                 </div>
-          
-                       
+              </div>
+              <div class="options">
+                <div class="toggle-btn">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
+                    />
+                  </svg>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -104,21 +108,98 @@
           <div class="back-btn">
             <svg
               xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="w-6 h-6"
+              class="ionicon"
+              viewBox="0 0 512 512"
             >
               <path
+                fill="none"
+                stroke="currentColor"
                 stroke-linecap="round"
                 stroke-linejoin="round"
-                d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18"
-                />
-              </svg>
+                stroke-width="32"
+                d="M368 368L144 144M368 144L144 368"
+              />
+            </svg>
+          </div>
+          <div class="top-logo">
+            <img src="../Images/ToDo-List-Logo.png" alt="" />
+          </div>
+        </div>
+        <div class="category-details">
+          <img src="../Images/boy.png" alt="" id="category-img" />
+          <div class="details">
+            <p>8 tasks</p>
+            <h1>Personal</h1>
+          </div>
+        </div>
+        <div class="tasks-wrapper">
+          <div class="tasks">
+            <div class="task-wrapper">
+              <label for="task-input" class="task">
+                <input type="checkbox" name="" id="task-input" />
+                <span class="checkmark">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="ionicon"
+                    viewBox="0 0 512 512"
+                  >
+                    <path
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="32"
+                      d="M416 128L192 384l-96-96"
+                    />
+                  </svg>
+                </span>
+                <p>Buy a new</p>
+              </label>
+              <div class="delete">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="ionicon"
+                  viewBox="0 0 512 512"
+                >
+                  <path
+                    d="M112 112l20 320c.95 18.49 14.4 32 32 32h184c17.67 0 30.87-13.51 32-32l20-320"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="32"
+                  />
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-miterlimit="10"
+                    stroke-width="32"
+                    d="M80 112h352"
+                  />
+                  <path
+                    d="M192 112V72h0a23.93 23.93 0 0124-24h80a23.93 23.93 0 0124 24h0v40M256 176v224M184 176l8 224M328 176l-8 224"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="32"
+                  />
+                </svg>
+              </div>
             </div>
           </div>
-        </div>  
+        </div>
+      </div>
+      <div class="add-new-task"></div>
+    </div>
     <script src="../JavaScript/app.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
