added the scss codes for design

--- a/Html/index.html
+++ b/Html/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="screen-backdrop"></div>
+      <div class="backdrop-screen"></div>
       <div class="screen home-screen">
         <div class="head-wrapper">
           <div class="head-top">
