--- a/Html/index.html
+++ b/Html/index.html
@@ -36,7 +36,7 @@
           <div class="welcome">
             <div class="content">
               <h1>Hello Elvin</h1>
-              <p>Today you Have 5 tasks</p>
+              <p>Today you Have <span class="totalTasks">5</span> tasks</p>
             </div>
             <div class="img">
               <div class="backdrop"></div>
@@ -46,33 +46,6 @@
         </div>
         <div class="categories-wrapper">
           <div class="categories">
-            <div class="category">
-              <div class="left">
-                <img src="../Images/boy.png" alt="" />
-                <div class="content">
-                  <h1>Personal</h1>
-                  <p>5 Tasks</p>
-                </div>
-              </div>
-              <div class="options">
-                <div class="toggle-btn">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    class="w-6 h-6"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M12 6.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 12.75a.75.75 0 110-1.5.75.75 0 010 1.5zM12 18.75a.75.75 0 110-1.5.75.75 0 010 1.5z"
-                    />
-                  </svg>
-                </div>
-              </div>
-            </div>
             <div class="category">
               <div class="left">
                 <img src="../Images/boy.png" alt="" />
@@ -128,8 +101,8 @@
         <div class="category-details">
           <img src="../Images/boy.png" alt="" id="category-img" />
           <div class="details">
-            <p>8 tasks</p>
-            <h1>Personal</h1>
+            <p class="category-tasks">8 tasks</p>
+            <h1 class="category-title">Personal</h1>
           </div>
         </div>
         <div class="tasks-wrapper">
