each category custom tasks added the tasksContainer

--- a/Html/index.html
+++ b/Html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../StyleSheet/main.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper show-category">
       <div class="backdrop-screen"></div>
       <div class="screen home-screen">
         <div class="head-wrapper">
