add and remove task functionality added

--- a/Html/index.html
+++ b/Html/index.html
@@ -109,7 +109,12 @@
           <div class="tasks">
             <div class="task-wrapper">
               <label for="task-input" class="task">
-                <input type="checkbox" name="" id="task-input" />
+                <input
+                  type="checkbox"
+                  name="checkbox"
+                  id="task-input"
+                  class="check"
+                />
                 <span class="checkmark">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -186,7 +191,7 @@
         <h1 class="head">Add Task</h1>
         <div class="input-group">
           <label for="task-input">Task</label>
-          <input type="text" id="task-input" required />
+          <input type="text" id="task-input" class="input-field" />
         </div>
         <div class="input-group">
           <label for="category-select">Category</label>
