doing some refactoring to scss codes

--- a/Html/index.html
+++ b/Html/index.html
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="screen category-screen">
-        <div class="head-wrapper">
+        <div class="head-top">
           <div class="back-btn">
             <svg
               xmlns="http://www.w3.org/2000/svg"
