--- a/Html/index.html
+++ b/Html/index.html
@@ -35,10 +35,10 @@
           </div>
           <div class="welcome">
             <div class="content">
-              <h1>Hello Elvin</h1>
-              <p>Today you Have <span class="totalTasks">5</span> tasks</p>
+              <h1 class="content-head">Hello Elvin</h1>
+              <p class="content-text">Today you Have <span class="totalTasks">5</span> tasks</p>
             </div>
-            <div class="img">
+            <div class="user-img">
               <div class="backdrop"></div>
               <img src="../Images/boy.png" alt="" />
             </div>
@@ -191,11 +191,11 @@
         <h1 class="head">Add Task</h1>
         <div class="input-group">
           <label for="task-input">Task</label>
-          <input type="text" id="task-input" class="input-field" />
+          <input type="text" id="task-input" class="todo-input" />
         </div>
         <div class="input-group">
           <label for="category-select">Category</label>
-          <select type="text" id="category-select">
+          <select type="text" id="category-select" class="todo-category">
             <option value="personal">Personal</option>
           </select>
         </div>
