code refactoring and doing some changes

--- a/Html/index.html
+++ b/Html/index.html
@@ -79,8 +79,8 @@
             </div>
           </div>
         </div>
-        <div class="screen category-screen">
-          <div class="head-top">
+        <div class="screen category-screen ">
+          <div class="head-top head-wrapper">
             <div class="back-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
