Validation added for taskInput

--- a/Html/index.html
+++ b/Html/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="screen category-screen ">
+        <div class="screen category-screen">
           <div class="head-top head-wrapper">
             <div class="back-btn">
               <svg
@@ -195,6 +195,7 @@
           <div class="input-group">
             <label for="task-input">Task</label>
             <input type="text" id="task-input" class="todo-input" />
+            <span class="error-message"></span>
           </div>
           <div class="input-group">
             <label for="category-select">Category</label>
@@ -209,7 +210,7 @@
         </div>
       </div>
     </main>
-    
+
     <script src="../JavaScript/app.js"></script>
     <script
       type="module"
