completed task counter place has added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="../Images/ToDo-List-Logo.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/Images/ToDo-List-Logo.png"
+    />
     <title>ToDo-App</title>
-    <link rel="stylesheet" href="../StyleSheet/main.css" />
+    <link rel="stylesheet" href="./assets/StyleSheet/main.css" />
   </head>
   <body>
     <main>
@@ -31,7 +35,7 @@
                 </svg>
               </div>
               <div class="top-logo">
-                <img src="../Images/ToDo-List-Logo.png" alt="" />
+                <img src="./assets/Images/ToDo-List-Logo.png" alt="" />
               </div>
             </div>
             <div class="welcome">
@@ -43,7 +47,7 @@
               </div>
               <div class="user-img">
                 <div class="backdrop"></div>
-                <img src="../Images/boy.png" alt="" />
+                <img src="./assets/Images/boy.png" alt="" />
               </div>
             </div>
           </div>
@@ -51,7 +55,7 @@
             <div class="categories">
               <div class="category">
                 <div class="left">
-                  <img src="../Images/boy.png" alt="" />
+                  <img src="./assets/Images/boy.png" alt="" />
                   <div class="content">
                     <h1>Personal</h1>
                     <p>5 Tasks</p>
@@ -98,11 +102,11 @@
               </svg>
             </div>
             <div class="top-logo">
-              <img src="../Images/ToDo-List-Logo.png" alt="" />
+              <img src="./assets/Images/ToDo-List-Logo.png" alt="" />
             </div>
           </div>
           <div class="category-details">
-            <img src="../Images/boy.png" alt="" id="category-img" />
+            <img src="./assets/Images/boy.png" alt="" id="category-img" />
             <div class="details">
               <p class="category-tasks">8 tasks</p>
               <h1 class="category-title">Personal</h1>
@@ -169,6 +173,9 @@
                 </div>
               </div>
             </div>
+            <div class="completed-tasks">
+              <span class="task-done"></span>
+            </div>
           </div>
         </div>
         <div class="add-task-btn">
@@ -213,7 +220,7 @@
       </div>
     </main>
 
-    <script src="../JavaScript/app.js"></script>
+    <script src="./assets/JavaScript/app.js"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
