--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/StyleSheet/main.css" />
   </head>
   <body>
-    <main>
+    <main class="app-main">
       <div class="wrapper">
         <div class="backdrop-screen"></div>
         <div class="screen home-screen">
@@ -40,9 +40,9 @@
             </div>
             <div class="welcome">
               <div class="content">
-                <h1 class="content-head">Hello Elvin</h1>
+                <h1 class="content-head">Hello There</h1>
                 <p class="content-text">
-                  Today you Have <span class="totalTasks">5</span> tasks
+                  Today you have <span class="totalTasks">5</span> tasks
                 </p>
               </div>
               <div class="user-img">
